--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-天大地大一凡最大啊，红红火火恍恍惚惚。
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Title</title>
+</head>
+<body>
+静夜思
+
+床前明月光，疑是地上霜。
+举头望明月，低头思故乡。
+</body>
+</html>
