--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>这是唐诗</title>
+    <title>唐诗一首</title>
 </head>
 <body>
 静夜思
 
 床前明月光，
-疑是地上霜。
+    疑是地上霜。
 举头望明月，
-低头思故乡。
+    低头思故乡。
 </body>
 </html>
