--- a/index.html
+++ b/index.html
@@ -2,14 +2,20 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>唐诗一首</title>
+    <title>段友出征</title>
 </head>
 <body>
-静夜思
+段友出征，寸草不生
 
-床前明月光，
-    疑是地上霜。
-举头望明月，
-    低头思故乡。
+天王盖都护，
+    玉帝日王母。
+宝塔镇河妖，
+    巨友屌缠腰。
+清风扶杨柳，
+    敢问是段友？
+啤酒小龙虾，
+    段友是一家。
+    馒头 
+    嗷~
 </body>
 </html>
