--- a/index.html
+++ b/index.html
@@ -5,18 +5,16 @@
     <title>段友出征</title>
 </head>
 <body>
-<img src="段子.jpg">
-段友出征，寸草不生
-
+<img src="">
+段友出征
 天王盖地虎，
-    玉帝日王母。
+玉帝日王母。
 宝塔镇河妖，
-    巨友屌缠腰。
+巨友屌缠腰。
 清风扶杨柳，
-    敢问是段友？
+敢问是段友？
 啤酒小龙虾，
-    段友是一家。
-    馒头 
-    嗷~
+段友是一家。
+
 </body>
 </html>
