--- a/001Basics/test.html
+++ b/001Basics/test.html
@@ -6,8 +6,8 @@
 </head>
 <body>
 <img src="./images/内涵段子.jpg"/>
-<h1>张雨奇QQ：3183165736。</p>
-<h1>段友出征</h1>
+<h1>张雨奇QQ：3183165736。</h1>
+<h2>段友出征</h2>
 <p>天王盖地虎，</p>
 <p>玉帝日王母。</p>
 <p>宝塔镇河妖，</p>
