--- a/001Basics/test.html
+++ b/001Basics/test.html
@@ -6,9 +6,7 @@
 </head>
 <body>
 <img src="./images/内涵段子.jpg"/>
-<h1>张雨奇：3183165736</h1>
-<p>段友出征</p>
-<p>寸草不生</p>
+<h1>段友出征</h1>
 <p>天王盖地虎，</p>
 <p>玉帝日王母。</p>
 <p>宝塔镇河妖，</p>
