--- a/001Basics/test.html
+++ b/001Basics/test.html
@@ -5,7 +5,7 @@
     <title>段友出征</title>
 </head>
 <body>
-<img src="内涵段子.jpg"/>
+<img src="./images/内涵段子.jpg"/>
 <h1>段友出征</h1>
 <p>天王盖地虎，</p>
 <p>玉帝日王母。</p>
