--- a/001Basics/index.html
+++ b/001Basics/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>段友出征</title>
+    <title>内涵段子</title>
 </head>
 <body>
-<img src="内涵段子.jpg">
+<img src="段子.jpg">
 <h1>段友出征</h1>
 <p>天王盖地虎，</p>
 <p>玉帝日王母。</p>
