--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>段友出征</title>
+    <title>内涵段子</title>
 </head>
 <body>
 <img src="段子.jpg">
