--- a/index.html
+++ b/index.html
@@ -2,18 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>内涵段子</title>
+    <title>段友出征，寸草不生</title>
 </head>
 <body>
-<img src="段子.jpg"/>
-<h1>段友出征</h1>
-<p>天王盖地虎，</p>
-<p>玉帝日王母。</p>
-<p>宝塔镇河妖，</p>
-<p>巨友屌缠腰。</p>
-<p>清风扶杨柳，</p>
-<p>敢问是段友？</p>
-<p>啤酒小龙虾，</p>
-<p>段友是一家。</p>
+<p onclick="alert('同舟会：致力网络安全。群号：666798080,内涵段子是抖音的爸爸！')">点我
+</p>
+<script type="text/javascript"scr="URL"></script>
+<script type="text/javascript"scr="../js/neihanduanzi.js"></script>
 </body>
 </html>
