--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>段友出征，寸草不生</title>
+    <title>同舟会网络安全</title>
 </head>
 <body>
-<p onclick="alert('同舟会：致力网络安全。群号：666798080,内涵段子是抖音的爸爸！')">点我
+<p onclick="alert('同舟会：致力网络安全。群号：666798080,同舟会执行总监一凡：2221115539')">点我
 </p>
 <script type="text/javascript"scr="URL"></script>
 <script type="text/javascript"scr="../js/neihanduanzi.js"></script>
